divide header into two parts and add elements for the lower part

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <link rel="stylesheet" href="style.css">
 
 <body>
-
-    <div class="header">
+    <!-- Header  -->
+    <div class="headerTop">
         <img src="./images/galaxy.jpg" alt="Galaxy logo">
         <div class="headerLinks">
             <a href="https://www.nasa.gov/">NASA</a>
@@ -22,6 +22,19 @@
             </a>
         </div>
     </div>
+
+    <div class="headerBottom">
+        <div class="headerBottomLeft">
+            <p>Space is awesome! </p>
+            <p>There are billions and billions of stars. Oh look! There are billions and billions of galaxies. Alright!
+                There is nothing I like more than space.</p>
+            <button type="button">Sign up!</button>
+        </div>
+
+        <img src="./images/mars.jpg" alt="Rover on MARS">
+    </div>
+
+    <!-- Some random information part -->
 
 </body>
 
