add second part of the page.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,28 @@
 
     <!-- Some random information part -->
 
+    <p>Some gorgeous images</p>
+
+    <div class="imgAndDescriptions">
+        <img src="./images/timelapse.jpg" alt="Timelapse of Stars at night.">
+        <p>Timelapse of stars at night.</p>
+    </div>
+
+    <div class="imgAndDescriptions">
+        <img src="./images/supernova.jpg" alt="A supernova in a distant galaxy.">
+        <p>A supernova in a distant galaxy.</p>
+    </div>
+
+    <div class="imgAndDescriptions">
+        <img src="./images/miky-way.jpg" alt="A photo of Milky Way galaxy.">
+        <p>A photo of Milky Way galaxy.</p>
+    </div>
+
+    <div class="imgAndDescriptions">
+        <img src="./images/solar-flares.jpg" alt="Solar flares in the Sun's atmosphere.">
+        <p>Solar flares in the Sun's atmosphere.</p>
+    </div>
+
 </body>
 
 </html>
