add quote part, sign-up part and footer

--- a/index.html
+++ b/index.html
@@ -63,8 +63,25 @@
 
     <!-- Quote part -->
 
+    <div class="quoteContainer">
+        <p>Who are we? We find that we live on an insignificant planet of a humdrum star lost in a galaxy tucked away in
+            some forgotten corner of a universe in which there are far more galaxies than people.</p>
+        <p>- Carl SAGAN</p>
+    </div>
 
+    <!-- Call to action part -->
 
+    <div class="blueContainer">
+        <p>Call to action! It's time!</p>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button type="button">Sign up!</button>
+    </div>
+
+    <!-- Footer -->
+
+    <div class="footer">
+        <p>Copyright © The Odin Project 2022</p>
+    </div>
 </body>
 
 </html>
