add font and color styles to style.css

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="headerBottom">
         <div class="headerBottomLeft">
-            <p>Space is awesome! </p>
+            <p id="heroText">Space is awesome! </p>
             <p>There are billions and billions of stars. Oh look! There are billions and billions of galaxies. Alright!
                 There is nothing I like more than space.</p>
             <button type="button">Sign up!</button>
@@ -36,7 +36,7 @@
 
     <!-- Some random information part -->
 
-    <p>Some gorgeous images</p>
+    <p class="informationHeaderText">Some gorgeous images</p>
 
     <div class="randomInfoPart">
 
@@ -64,7 +64,8 @@
     <!-- Quote part -->
 
     <div class="quoteContainer">
-        <p>Who are we? We find that we live on an insignificant planet of a humdrum star lost in a galaxy tucked away in
+        <p class="quoteText">Who are we? We find that we live on an insignificant planet of a humdrum star lost in a
+            galaxy tucked away in
             some forgotten corner of a universe in which there are far more galaxies than people.</p>
         <p>- Carl SAGAN</p>
     </div>
