edit body padding and margins

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Space is awesome!</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
-<title>Space is awesome!</title>
-<link rel="stylesheet" href="style.css">
+
+
 
 <body>
     <!-- Header  -->
@@ -36,28 +38,28 @@
 
     <!-- Some random information part -->
 
-    <p class="informationHeaderText">Some gorgeous images</p>
+    <div class="randomInfo">
 
-    <div class="randomInfoPart">
+        <p class="informationHeaderText">Some gorgeous images</p>
 
-        <div class="imgAndDescriptions">
-            <img src="./images/timelapse.jpg" alt="Timelapse of Stars at night.">
-            <p>Timelapse of stars at night.</p>
-        </div>
+        <div class="randomInfoPart">
 
-        <div class="imgAndDescriptions">
-            <img src="./images/supernova.jpg" alt="A supernova in a distant galaxy.">
-            <p>A supernova in a distant galaxy.</p>
-        </div>
+            <div class="imgAndDescriptions">
+                <img src="./images/timelapse.jpg" alt="Timelapse of Stars at night.">Timelapse of stars at night
+            </div>
 
-        <div class="imgAndDescriptions">
-            <img src="./images/miky-way.jpg" alt="A photo of Milky Way galaxy.">
-            <p>A photo of Milky Way galaxy.</p>
-        </div>
+            <div class="imgAndDescriptions">
+                <img src="./images/supernova.jpg" alt="A supernova in a distant galaxy.">A supernova in a distant galaxy
+            </div>
 
-        <div class="imgAndDescriptions">
-            <img src="./images/solar-flares.jpg" alt="Solar flares in the Sun's atmosphere.">
-            <p>Solar flares in the Sun's atmosphere.</p>
+            <div class="imgAndDescriptions">
+                <img src="./images/miky-way.jpg" alt="A photo of Milky Way galaxy.">A photo of Milky Way galaxy.
+            </div>
+
+            <div class="imgAndDescriptions">
+                <img src="./images/solar-flares.jpg" alt="Solar flares in the Sun's atmosphere.">Solar flares in the
+                Sun's atmosphere.
+            </div>
         </div>
     </div>
 
