finish landing page

--- a/index.html
+++ b/index.html
@@ -14,26 +14,29 @@
 
 <body>
     <!-- Header  -->
-    <div class="headerTop">
-        <img src="./images/galaxy.jpg" alt="Galaxy logo">
-        <div class="headerLinks">
-            <a href="https://www.nasa.gov/">NASA</a>
-            <a href="https://en.wikipedia.org/wiki/Outer_space">WIKIPEDIA</a>
-            <a
-                href="https://www.google.com/search?q=space&sxsrf=ALiCzsaUtOG7jx5dfagH4CLmkZPnhfMEfw:1657723702301&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjh66SDjvb4AhVVVfEDHUfvAJgQ_AUoAXoECAEQAw">PHOTOS
-            </a>
-        </div>
-    </div>
-
-    <div class="headerBottom">
-        <div class="headerBottomLeft">
-            <p id="heroText">Space is awesome! </p>
-            <p>There are billions and billions of stars. Oh look! There are billions and billions of galaxies. Alright!
-                There is nothing I like more than space.</p>
-            <button type="button">Sign up!</button>
+    <div class="header">
+        <div class="headerTop">
+            <img src="./images/galaxy.jpg" alt="Galaxy logo">
+            <div class="headerLinks">
+                <a href="https://www.nasa.gov/">NASA</a>
+                <a href="https://en.wikipedia.org/wiki/Outer_space">WIKIPEDIA</a>
+                <a
+                    href="https://www.google.com/search?q=space&sxsrf=ALiCzsaUtOG7jx5dfagH4CLmkZPnhfMEfw:1657723702301&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjh66SDjvb4AhVVVfEDHUfvAJgQ_AUoAXoECAEQAw">PHOTOS
+                </a>
+            </div>
         </div>
 
-        <img src="./images/mars.jpg" alt="Rover on MARS">
+        <div class="headerBottom">
+            <div class="headerBottomLeft">
+                <p id="heroText">Space is awesome! </p>
+                <p>There are billions and billions of stars. Oh look! There are billions and billions of galaxies.
+                    Alright!
+                    There is nothing I like more than space.</p>
+                <button type="button">Sign up!</button>
+            </div>
+
+            <img src="./images/mars.jpg" alt="Rover on MARS">
+        </div>
     </div>
 
     <!-- Some random information part -->
@@ -69,21 +72,25 @@
         <p class="quoteText">Who are we? We find that we live on an insignificant planet of a humdrum star lost in a
             galaxy tucked away in
             some forgotten corner of a universe in which there are far more galaxies than people.</p>
-        <p>- Carl SAGAN</p>
+        <p class="carlSagan">- Carl SAGAN</p>
     </div>
 
     <!-- Call to action part -->
+    <div class="callToAction">
+        <div class="blueContainer">
 
-    <div class="blueContainer">
-        <p>Call to action! It's time!</p>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button type="button">Sign up!</button>
+            <div class="callToActionLeft">
+                <p>Call to action! It's time!</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button type="button">Sign up!</button>
+        </div>
     </div>
 
     <!-- Footer -->
 
     <div class="footer">
-        <p>Copyright © The Odin Project 2022</p>
+        <p class="copyright">Copyright © The Odin Project 2022</p>
     </div>
 </body>
 
